# ccvm

./: .gitignore  LICENSE  README.md  output.ir  test.c  test2.c  test_6args.c  test_for.c  test_multi.c  test_printf.c  test_str.c  test_while.c
backend/: CMakeLists.txt
backend/include/ccvm/backend/: codegen.h  ir.h  ir_parser.h
backend/src/: codegen.c  ir_parser.c
backend/src/arm64/: isel.c
backend/src/riscv/: isel.c
backend/src/x86_64/: isel.c
core/: Cargo.toml
core/src/: instruction.rs  lib.rs  module.rs  passes.rs  types.rs  validation.rs
docs/specs/: ir-specification.md  technical-documentation.md
frontend/: CMakeLists.txt  output.ir  run.bat
frontend/cmake/: ccvm-frontend-config.cmake.in
frontend/include/ccvm/frontend/: abi.h  ast.h  common.h  error_handler.h  ir_generator.h  lexer.h  location.h  parser.h  semantic_analyzer.h  stdlib_compat.h  token.h
frontend/src/: ast.cpp  error_handler.cpp  ir_generator.cpp  lexer.cpp  location.cpp  main.cpp  parser.cpp  semantic_analyzer.cpp  token.cpp
julia/: Project.toml  main.jl
julia/src/: BenchmarkingSuite.jl  JuliaFrontend.jl
optimizer/: CMakeLists.txt
optimizer/include/ccvm/optimizer/: alias_analysis.h  analysis.h  config.h  dom_tree.h  interprocedural.h  ir_builder.h  ir_printer.h  ir_types.h  ir_verifier.h  loop_analysis.h  optimization_stats.h  optimizer.h  pass_manager.h  passes.h  profile_guided.h  scalar_evolution.h  transforms.h  value_tracking.h
optimizer/src/: analysis.c  const_folding.c  dce.c  dom_tree.c  inlining.c  interprocedural.c  ir_builder.c  ir_printer.c  ir_verifier.c  loop_opt.c  mem2reg.c  optimization_stats.c  optimizer.c  pass_manager.c  passes_stubs.c  profile_guided.c  scalar_evolution.c  transforms.c  value_tracking.c  vectorization.c
optimizer/test/: opt_test.c
semantic/: Cargo.toml
semantic/src/: borrow_checker.rs  control_flow.rs  data_flow.rs  lib.rs  lifetime.rs  symbol_table.rs  types.rs
