[package]
name = "ccvm-semantic"
version = "0.1.0"
edition = "2021"
authors = ["CCVM Team <team@ccvm.dev>"]
description = "Semantic analyzer for CCVM (Cross-Compiler Virtual Machine)"
license = "MIT"
repository = "https://github.com/ccvm/ccvm"
keywords = ["compiler", "semantic", "analysis", "type-checking"]
categories = ["compilers", "development-tools"]

[dependencies]
ccvm-core = { path = "../core" }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
petgraph = "0.6"
dashmap = "5.5"
parking_lot = "0.12"
tracing = "0.1"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
pretty_assertions = "1.4"